src/test/ui/proc-macro/shadow.stderr
error[E0259]: the name `derive_a` is defined multiple times
  --> $DIR/shadow.rs:6:1
   |
LL |   extern crate derive_a;
   |   ---------------------- previous import of the extern crate `derive_a` here
LL | / #[macro_use]
LL | | extern crate derive_a;
   | | ^^^^^^^^^^^^^^^^^^^^^-
   | |_|____________________|
   |   |                    help: remove unnecessary import
   |   `derive_a` reimported here
   |
   = note: `derive_a` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0259`.
